--- a/estilo/style.css
+++ b/estilo/style.css
@@ -14,6 +14,13 @@ body {
     font-family: 'Work Sans', sans-serif;
     background-color: white;
 }
+faq-section {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  }
 
 .background-container {
     position: relative;
@@ -76,9 +83,12 @@ body {
     height: 31px;
 }
 .faq-question:hover {
-    background-color: #e0e0e0; 
+    background-color: white; 
 }
 
+.faq-question:hover span {
+    color: hsl(293, 76%, 57%); 
+}
 .faq-answer {
     font-family: var(--fonte-principal);
     display: none; 
@@ -87,8 +97,6 @@ body {
     border-radius: 8px; 
     margin-top: 10px; 
 }
-
-
 
 .attribution{
     font-size: 11px;
