--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,103 +8,93 @@
     --fonte-destaque: specimen work, sans-serif;
     --fonte-principal: Poppins, style;
 }
-
-body {
+body{
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: var(--fonte-destaque);
     background-color: white;
 }
-faq-section {
+.faq-section{
     max-width: 800px;
     margin: auto;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  }
-
-.background-container {
+    
+}
+.background-container{
     position: relative;
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     overflow: hidden;
 }
-
-.background-svg {
+.background-svg{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: auto; 
-    z-index: 0; 
+    height: auto;
+    z-index: 0;
 }
-
-.faq-container {
-    position: absolute; 
-    top: 50px; 
+.faq-container{
+    position: absolute;
+    top: 50px;
     left: 50%;
-    transform: translateX(-50%); 
-    background-color:white; 
-    border-radius: 12px; 
+    transform: translateX(-50%);
+    background-color: white;
+    border-radius: 12px;
     padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
-    max-width: 600px; 
-    z-index: 1; 
+    box-shadow: 0px 4px 8px rbga(0, 0, 0, 0.1);
+    max-width: 600px;
+    z-index: 1;
 }
-
-.faq-header {
+.faq-header{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 }
-
-.faq-header h1 {
+.faq-header h1{
+    font-weight: bold;
     font-size: 2rem;
-    color: #301534; 
-    margin-left: 10px; 
+    color: #301534;
+    margin-left: 10px;
 }
-
-.faq-item {
+.faq-item{
     margin-bottom: 20px;
 }
-
-.faq-question {
-    background-color: white; 
-    padding: 15px; 
-    border-radius: 8px; 
-    cursor: pointer; 
-    transition: background-color 0.3s; 
+.faq-question{
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.faq-question svg {
+.faq-question svg{
     width: 30px;
     height: 31px;
 }
-.faq-question:hover {
-    background-color: white; 
+.faq-question:hover{
+    background-color: white;
 }
-
-.faq-question:hover span {
-    color: hsl(293, 76%, 57%); 
+.faq-question:hover span{
+    color:hsl(293, 76%, 57%)
 }
-.faq-answer {
+.faq-answer{
     font-family: var(--fonte-principal);
-    display: none; 
-    padding: 15px; 
-    color: rgb(130, 130, 131); 
-    border-radius: 8px; 
-    margin-top: 10px; 
+    display: none;
+    padding: 15px;
+    color: rgb(130, 130, 131);
+    border-radius: 8px;
+    margin-top: 10px;
 }
-
 .attribution{
-    font-size: 11px;
+    font-size: 0.8rem;
     text-align: center;
     font-weight: bold;
-    margin-top: 50px;
+    margin-top: 50pxx;
 }
-.attribution a {
+.attribution a{
     color: hsl(228, 45%, 44%);
 }
-
